@@ -1,3 +1,9 @@
+Thu Jun 10 17:27:35 2004  Arvind S. Krishna  <arvindk@dre.vanderbilt.edu>
+
+        * DnC/Config_Handlers/Utils.cpp:
+
+          Fixed some memory leaks as well!!
+
 Thu Jun 10 17:26:25 2004  Jaiganesh B  <jai@dre.vanderbilt.edu>
 
         * DnC/Config_Handlers/Process_Element.cpp:
